--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
-<div class="container">
-  <div class="title">
-    Simple searching tool using the YouTube API
-  </div>
-  <div class="form">
+<!DOCTYPE html>
+  <head>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+  <body>
+  <div class="container">
     <div class="search">
-      <div class="text-center">
-        <input class="searchForm" id="searchTerm">
+      <div class="title">
+        Simple searching tool using the YouTube API
+      </div>
+      <div class="form">
+        <div class="input">
+          <div class="text-center">
+            <input class="searchForm" id="searchTerm">
+          </div>
+        </div>
+        <div class="button">
+             <button id="search" class="searchButton" type="button">search</button>
+        </div>
       </div>
     </div>
-    <div class="button">
-         <button id="search" class="searchButton" type="button">search</button>
+    <div class="results">
+      <ul class="result-item">
+        <li> Youtube Video Title </li>
+        <li> Youtube Video Title </li>
+        <li> Youtube Video Title </li>
+      </ul>
     </div>
   </div>
-</div>
+  </body>
+</html>
