search adds content to the page - now needs styling and sorting options

--- a/index.html
+++ b/index.html
@@ -21,16 +21,7 @@
         </div>
       </div>
     </div>
-    <div class="results">
-      <ul class="result-item">
-        <li> Youtube Video Title </li>
-        <li> Youtube Video Title </li>
-        <li> Youtube Video Title </li>
-      </ul>
-    </div>
-    <div id="myDiv">
-      pending
-    </div>
+    <div class="results"></div>
   </div>
   </body>
 </html>
