fixed bug where page continues to scroll and add content

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div class="button">
-             <button id="search" class="searchButton" type="button" onclick="getResults();">search</button>
+             <button id="search" class="searchButton" type="button" onclick="emptyDiv(); getResults();">search</button>
         </div>
       </div>
     </div>
