--- a/index.html
+++ b/index.html
@@ -8,12 +8,27 @@
   <div class="container">
     <div class="search">
       <div class="title">
-        Simple searching tool using the YouTube API
+        <h1>Youtube Search</h1>
+      </div>
+      <div class="text">
+        <p>
+          Search results default to being sorted by <strong>relevance</strong>. Other valid sorting options: <br>
+          <strong>date</strong> – Resources are sorted in reverse chronological order based on the date they were created. <br>
+          <strong>rating</strong> – Resources are sorted from highest to lowest rating. <br>
+          <strong>relevance</strong> – Resources are sorted based on their relevance to the search query. This is the default value for this parameter. <br>
+          <strong>title</strong> – Resources are sorted alphabetically by title. <br>
+          <strong>videoCount</strong> – Channels are sorted in descending order of their number of uploaded videos. <br>
+          <strong>viewCount</strong> – Resources are sorted from highest to lowest number of views. For live broadcasts, videos are sorted by number of concurrent viewers while the broadcasts are ongoing. <br>
+
+        </p>
       </div>
       <div class="form">
         <div class="input">
           <div class="text-center">
-            <input class="searchForm" id="searchTerm">
+            <input class="searchForm" id="searchTerm" placeholder="Search term">
+          </div>
+          <div class="text-center">
+            <input class="sortForm" id="sort" placeholder="Sorting method">
           </div>
         </div>
         <div class="button">
