each item gets put into a div of its own and the thumbnails are showing up now

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <input class="searchForm" id="searchTerm" placeholder="Search term">
           </div>
           <div class="text-center">
-            <input class="sortForm" id="sort" placeholder="Sorting method">
+            <input class="sortForm" id="sort" placeholder="Sorting method" value="relevance">
           </div>
         </div>
         <div class="button">
