thrown everything into a scrolly element in the middle, put spaces between each entry for easier reading

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </p>
       </div>
       <div class="form">
+        <form>
         <div class="input">
           <div class="text-center">
             <input class="searchForm" id="searchTerm" placeholder="Search term">
@@ -34,6 +35,7 @@
         <div class="button">
              <button id="search" class="searchButton" type="button" onclick="emptyDiv(); getResults();">search</button>
         </div>
+      </form>
       </div>
     </div>
     <div class="results"></div>
