--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="./style.css">
     <script type="text/javascript" src="./script.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
   <body>
   <div class="container">
@@ -13,12 +14,12 @@
       <div class="text">
         <p>
           Search results default to being sorted by <strong>relevance</strong>. Other valid sorting options: <br>
-          <strong>date</strong> – Resources are sorted in reverse chronological order based on the date they were created. <br>
-          <strong>rating</strong> – Resources are sorted from highest to lowest rating. <br>
-          <strong>relevance</strong> – Resources are sorted based on their relevance to the search query. This is the default value for this parameter. <br>
-          <strong>title</strong> – Resources are sorted alphabetically by title. <br>
-          <strong>videoCount</strong> – Channels are sorted in descending order of their number of uploaded videos. <br>
-          <strong>viewCount</strong> – Resources are sorted from highest to lowest number of views. For live broadcasts, videos are sorted by number of concurrent viewers while the broadcasts are ongoing. <br>
+          <strong>relevance</strong>: Resources are sorted based on their relevance to the search query. This is the default value for this parameter. <br>
+          <strong>date</strong>: Resources are sorted in reverse chronological order based on the date they were created. <br>
+          <strong>rating</strong>: Resources are sorted from highest to lowest rating. <br>
+          <strong>title</strong>: Resources are sorted alphabetically by title. <br>
+          <strong>videoCount</strong>: Channels are sorted in descending order of their number of uploaded videos. <br>
+          <strong>viewCount</strong>: Resources are sorted from highest to lowest number of views. For live broadcasts, videos are sorted by number of concurrent viewers while the broadcasts are ongoing. <br>
 
         </p>
       </div>
@@ -29,7 +30,14 @@
             <input class="searchForm" id="searchTerm" placeholder="Search term">
           </div>
           <div class="text-center">
-            <input class="sortForm" id="sort" placeholder="Sorting method" value="relevance">
+            <select class="sortForm" id="sort" name="sort">
+              <option value="relevance">Relevance</option>
+              <option value="date">Date</option>
+              <option value="rating">Rating</option>
+              <option value="title">Title</option>
+              <option value="videoCount">Video Count</option>
+              <option value="viewCount">View Count</option>
+            </select>
           </div>
         </div>
         <div class="button">
