changed my styles and adjusted copy to case correctly

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <div class="text">
         <p>
           Search results default to being sorted by <strong>relevance</strong>. Other valid sorting options: <br>
-          <strong>relevance</strong>: Resources are sorted based on their relevance to the search query. This is the default value for this parameter. <br>
-          <strong>date</strong>: Resources are sorted in reverse chronological order based on the date they were created. <br>
-          <strong>rating</strong>: Resources are sorted from highest to lowest rating. <br>
-          <strong>title</strong>: Resources are sorted alphabetically by title. <br>
-          <strong>videoCount</strong>: Channels are sorted in descending order of their number of uploaded videos. <br>
-          <strong>viewCount</strong>: Resources are sorted from highest to lowest number of views. For live broadcasts, videos are sorted by number of concurrent viewers while the broadcasts are ongoing. <br>
+          <strong>Relevance</strong>: Resources are sorted based on their relevance to the search query. This is the default value for this parameter. <br>
+          <strong>Date</strong>: Resources are sorted in reverse chronological order based on the date they were created. <br>
+          <strong>Rating</strong>: Resources are sorted from highest to lowest rating. <br>
+          <strong>Title</strong>: Resources are sorted alphabetically by title. <br>
+          <strong>Video Count</strong>: Channels are sorted in descending order of their number of uploaded videos. <br>
+          <strong>View Count</strong>: Resources are sorted from highest to lowest number of views. For live broadcasts, videos are sorted by number of concurrent viewers while the broadcasts are ongoing. <br>
 
         </p>
       </div>
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="button">
-             <button id="search" class="searchButton" type="button" onclick="emptyDiv(); getResults();">search</button>
+             <button id="search" class="searchButton" type="button" onclick="emptyDiv(); getResults();">Search</button>
         </div>
       </form>
       </div>
