small copy adjustments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div class="text">
         <p>
-          Search results default to being sorted by <strong>relevance</strong>. Other valid sorting options: <br>
+          Search results default to being sorted by <strong>Relevance</strong>. Other valid sorting options: <br>
           <strong>Relevance</strong>: Resources are sorted based on their relevance to the search query. This is the default value for this parameter. <br>
           <strong>Date</strong>: Resources are sorted in reverse chronological order based on the date they were created. <br>
           <strong>Rating</strong>: Resources are sorted from highest to lowest rating. <br>
@@ -27,7 +27,7 @@
         <form>
         <div class="input">
           <div class="text-center">
-            <input class="searchForm" id="searchTerm" placeholder="Search term">
+            <input class="searchForm" id="searchTerm" placeholder="Search query">
           </div>
           <div class="text-center">
             <select class="sortForm" id="sort" name="sort">
