sorting alphabetically 'works' but it breaks the results pretty bad

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
               <option value="title">Title</option>
               <option value="videoCount">Video Count</option>
               <option value="viewCount">View Count</option>
-            </select>
+            </select><br>
+            <label><input type="checkbox" onclick="sortListDir()" name="alphabetSort" id="checkbox" />Sort Alphabetically</label>
           </div>
         </div>
         <div class="button">
@@ -46,7 +47,9 @@
       </form>
       </div>
     </div>
-    <div class="results"></div>
+    <div class="res">
+      <ul class="results" id="id01"></ul>
+    </div>
   </div>
   </body>
 </html>
