--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
               <option value="viewCount">View Count</option>
             </select><br>
             <label><input type="checkbox" onclick="sortListDir()" name="alphabetSort" id="checkbox" />Sort Alphabetically</label>
+            <span class="helpText"> << This will change the list you retrieved into alphabetical order. Unclicking it will reverse.</span> <br>
+            <label><input type="checkbox" onclick="sortListDate()" name="dateSort" id="checkbox" />Sort by Date</label>
+            <span class="helpText"> << This will change the list you retrieved into alphabetical order. Unclicking it will reverse.</span>
           </div>
         </div>
         <div class="button">
